@@ -71,6 +71,7 @@ public abstract class BTAGenLayer extends GenLayer {
 			
 			if (passNum == 1) {
 				layerExtras = new BTAGenLayerShore(1000L, layerExtras, generatorInfo, 1);
+				layerExtras = new BTAGenLayerShoreGuaranteed(1000L, layerExtras, generatorInfo);
 			}
 
 			if (passNum == scale - 3) {
