@@ -1,6 +1,7 @@
 Version 1.4.0
 [list]
 [*]Added a new surface builder system which allows me much finer control over how biomes are generated. This includes incorporation of K.JPG's OpenSimplex2 (more information in credits section of OP).
+[*]Changed badlands plateaus in new worlds to actually be plateaus instead of just normal mountains.
 [*]Changed how sandy shorelines generate to remove directional artifacting by switching from perlin to simplex noise. This only affects new worlds.
 [*]Changed how terracotta layers generate in badlands to be more common and to be random based on the world seed instead of fixed. This only affects new worlds.
 [*]Changed how grass generates in outback to make it based on simplex noise instead of random decorators. This only affects new worlds.
